Progress on wine details

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		<!-- Handlebars template -->
 		<script id="activity-template" type="text/x-handlebars-template">
 			<li>
-				<a href='#wineDetail' onClick='viewWine({{activity_id}})'>
+				<a href='#wineDetail' onClick='viewWine({{wine_id}})'>
 					<h2>{{wine_name}}</h2>
 					<p>Added {{qty}} to My Cellar</p>
 					<p class="pad">{{timeDiffActivity timeAdded}}</p>
