Work on search function. Able to get search results array.

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
 
 			<div id="my-search" data-role="content">
-				<form id="search-form" data-ajax="false" onsubmit="SearchWines(); return false;" style="padding-bottom: 25px">
+				<form id="search-form" data-ajax="false" onsubmit="getAllItems(searchWines); return false;" style="padding-bottom: 25px">
 					<label for="search-basic">Search Input:</label>
 					<input type="search" name="search" id="search-basic" value="" />
 				</form>
