--- a/index.html
+++ b/index.html
@@ -286,8 +286,9 @@
 					<input type="search" name="search" id="search-basic" value="" />
 				</form>
 				
-				<div date-role="content">	
-					<ul data=role="list-view" id="my-search-list"></ul>
+				<div date-role="content">
+					<h2 class="searchHeader" style="display:none;">Search Results</h2>
+					<ul data-role="list-view" id="my-search-list"></ul>
 				</div>
 			</div>
 		</div> 
@@ -327,6 +328,15 @@
 		<!-- So skipping this portion of the book -->
 		<script id="social-template" type="text/x-handlebars-template">
 
+		</script>
+
+		<script id="search-results-template" type="text/x-handlebars-template">
+				<li>
+					<a href='#wineDetail' onClick='viewWine({{wine_id}})'>
+						<h2>{{wine_name}}</h2>
+						<p class="pad">{{timeDiffActivity timeAdded}}</p>
+					</a>				
+				</li>
 		</script>
 
 	</body>
